# parceed_transformer

./: .gitignore  parceed.cabal  tunnel.sh
src/: Main.hs  Types.hs
src/Types/: Comp.hs  EdEnv.hs  Faculty.hs  GeneralInfo.hs  Info.hs  PoliciesBenefits.hs  Schedule.hs  Util.hs
