name:                parceed
version:             0.1.0.0
description:         Transformation utility
license:             AllRightsReserved
author:              Alex Babkin
maintainer:          ababkin@gmail.com
build-type:          Simple
cabal-version:       >=1.8

executable parceed
  hs-source-dirs: src
  main-is:        Main.hs
  -- ghc-options:    -static -Wall -threaded -j -O2
  ghc-options:    -Wall -threaded -O0 -static
  buildable: True
  build-depends:
      base >= 4 && < 5
    , text
    , mtl
    , stm
    , transformers
    , bytestring
    , containers
    , filepath
    , aeson
    , time >= 1.5
    , cassava
    , conduit                       
    , conduit-extra                 
    , csv-conduit
    , resourcet
    , errors

